# Ingredient_to_Recipe

./: .gitignore  README.md  app.py  pyproject.toml
dependencies/: user_dependency.py
managers/: connection_manager.py
routers/: recipe_router.py
schemas/: recipe_schema.py
services/: gemini_service.py
templates/: index.html  index_chatbot.html
